--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-scroll": "^1.8.4",
+    "react-smooth-scroll-hook": "^1.3.4"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
+    "@types/react-scroll": "^1.8.3",
     "autoprefixer": "^10.3.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
