--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.8",
     "ethers": "^5.5.1",
     "keccak256": "^1.0.3",
     "merkletreejs": "^0.2.24",
