--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-jotform": "^1.0.2",
     "react-scroll": "^1.8.4",
     "react-smooth-scroll-hook": "^1.3.4",
     "web3": "^1.6.0"
